# holy-flavor-rater

./: .env.example  .gitignore  LICENSE  MIGRATION.md  README.md  audit.md  community-redesign.md  dashboard-redesign.md  docker-compose.yml  update_website.sh
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  schema.yaml
backend-rs/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
backend-rs/src/: auth.rs  avatar.rs  blacklist.rs  config.rs  cookies.rs  datetime.rs  db.rs  dto.rs  email.rs  error.rs  main.rs  media.rs  mentions.rs  merge.rs  openapi.rs  pagination.rs  password.rs  password_policy.rs  recommend.rs  search.rs  service.rs  state.rs  throttle.rs  tokens.rs  web.rs
backend-rs/src/entities/: banner.rs  category.rs  flavor.rs  job.rs  mod.rs  notification.rs  profile_comment.rs  rating.rs  rating_reaction.rs  reply.rs  system_config.rs  ticket.rs  ticket_message.rs  user.rs  user_ip.rs
backend-rs/src/jobs/: backup_db.rs  cleanup_duplicates.rs  download.rs  mod.rs  scheduler.rs  seed_banners.rs  seed_legacy.rs  sync_flavors.rs
backend-rs/src/routes/: activity.rs  admin.rs  auth.rs  banners.rs  categories.rs  flavors.rs  mod.rs  ratings.rs  replies.rs  social.rs  tickets.rs  users.rs
backend/api/: admin.py  email_backend.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_flavor_external_id_flavor_image_url_and_more.py  0003_flavor_shop_url.py  0004_user_email_confirmation_code_user_pending_email.py  0005_alter_user_theme.py  (+29 more)
backend/banners/: fireflies.json  generative-flow.json  generative-web.json  hextech.json  matrix.json  nebula.json
backend/holy_backend/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/staticfiles/: robots.txt
data/banners/: fireflies.json  generative-web.json  hextech-corruption.json  matrix.json  nebula.json
frontend/: .dockerignore  Dockerfile  entrypoint.sh  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  proxy_params.conf  ux-improvements.md  vite.config.ts
frontend/src/: App.tsx  api.ts  i18n.ts  index.css  main.tsx  theme.ts
legacy/: energy_flavors.json  hitschies_flavors.json  iced_tea_flavors.json  other_flavors.json
scripts/: backup.sh  cutover.sh  install-hooks.sh  pre-push.sh
(+197 files in other folders)
